--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="displayClock" class="clock" onload="showTime()"></div>
 </body>
-<script src="index.js"></script> d
+<script src="index.js"></script> 
 </html>
 
