--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
-
-    </head>
+  <head>
+    <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Allerta Stencil"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🕥</text></svg>"
+    />
+  </head>
   <body>
     <div id="displayClock" class="clock" onload="showTime()"></div>
-</body>
-<script src="index.js"></script> 
+  </body>
+  <script src="index.js"></script>
 </html>
-
